[package]
name = "stegosaurus"
version = "0.1.0"
authors = ["Martin Fracker, Jr. <martin.frackerjr@gmail.com>"]
description = "Reads data from stdin and sends the output hidden stegonagraphically to the specified output file"

[dependencies]
clap = "2"
image = "0.20"
serde = "1"
serde_derive = "1"
bincode = "1"
openssl = "0.10"
rpassword = "2.1"
